# TinyMaix-D1

./: .gitignore  CMakeLists.txt  Makefile  README.md  config.h.in
example/mnist_arduino/: tinymaix.ino  tm_model.cpp
include/TinyMaix/: tinymaix.h  tm_port.h
include/boot/: interrupt.h  riscv64.h  riscv_asm.h  riscv_encoding.h
include/common/: common.h  exp.h  types.h
include/drivers/: clint.h  uart.h
src/: CMakeLists.txt  main.c
src/TinyMaix/: tm_layers.c  tm_layers_O1.c  tm_layers_fp8.c  tm_model.c  tm_stat.c
src/boot/: interrupt.c  memcpy.S  memset.S  start.S  trap.S
src/common/: common.c  exp.c
src/drivers/: clint.c  clk.c  gpio.c  plint.c  timer.c  uart.c  watchdog.c
